--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
     <string name="e_mail">E-mail</string>
     <string name="retour">Retour</string>
     <string name="supprimer_le_compte">Supprimer le compte</string>
+    <string name="default_notification_channel_id">0</string>
+    <string name="notification">NOTIFICATION</string>
 </resources>
