--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,11 @@
 
     <string name="login">Connexion</string>
     <!-- MAIN ACTIVITY -->
-    <string name="error_not_connected">Vous devez vous connecter !</string>
-    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
-    <string name="error_no_internet">Aucune connexion internet !</string>
-    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
-    <string name="connection_succeed">Authentification réussie !</string>
-    <string name="button_login_text_logged">Afficher le profil</string>
+    <string name="error_not_connected">You must connect!</string>
+    <string name="error_authentication_canceled">Authentification canceled</string>
+    <string name="error_no_internet">No internet!</string>
+    <string name="error_unknown_error">Unknow error!</string>
+    <string name="connection_succeed">Authentification succeed!</string>
     <string name="button_login_text_not_logged">Connexion</string>
     <string name="facebook_application_id">267466468173033</string>
     <string name="fb_login_protocol_scheme">fb267466468173033</string>
@@ -37,11 +36,26 @@
     <string name="your_lunch">YOUR LUNCH</string>
     <string name="settings">SETTINGS</string>
     <string name="logout">LOGOUT</string>
-    <string name="mettre_jour_le_nom">Mettre à jour le nom</string>
+    <string name="mettre_jour_le_nom">update name</string>
     <string name="profile_name">profile_name</string>
     <string name="e_mail">E-mail</string>
-    <string name="retour">Retour</string>
-    <string name="supprimer_le_compte">Supprimer le compte</string>
+    <string name="retour">Back</string>
+    <string name="supprimer_le_compte">Delete account</string>
     <string name="default_notification_channel_id">0</string>
     <string name="notification">NOTIFICATION</string>
+    <string name="button_login_text_logged" translatable="false">show profile</string>
+    <string name="mapview">MapView</string>
+    <string name="listview">ListView</string>
+    <string name="workmates">WorkMates</string>
+    <string name="searchRestaurant">Search Restaurants</string>
+    <string name="availableWorkmate">Available Workmates</string>
+    <string name="searchWorkmates">Search Workmates</string>
+    <string name="noLunch" >No lunch chosen!</string>
+    <string name="restaurantChosen" >Lunch chosen!</string>
+    <string name="canceled" >Canceled</string>
+    <string name="is_joining">is joining!</string>
+    <string name="isEating">is eating</string>
+    <string name="notDecided">has not decied yet</string>
+
+    <string name="MAPS_API_KEY" translatable="false">AIzaSyC77ax8lhHQbeqgqiqJ7rqhJfCdEWE4FCk"></string>
 </resources>
