--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,11 +62,12 @@
     <string name="isEating">is eating</string>
     <string name="notDecided">has not decied yet</string>
 
-    <string name="MAPS_API_KEY" translatable="false">AIzaSyC77ax8lhHQbeqgqiqJ7rqhJfCdEWE4FCk"></string>
+    <string name="MAPS_API_KEY" translatable="false">AIzaSyC77ax8lhHQbeqgqiqJ7rqhJfCdEWE4FCk></string>
     <string name="Open">open</string>
     <string name="closed">closed</string>
     <string name="filter">Filter</string>
     <string name="alphabetical">alphabetical</string>
     <string name="distance">distance</string>
     <string name="note">note</string>
+
 </resources>
